Changelog for mk-archiver:

2010-09-11: version 1.0.24

   * The DSN documentation was ambiguous and redundant.
   * Added filename argument to before_bulk_insert() and custom_sth_bulk().

2010-06-08: version 1.0.23

   * Connections did not preserve server SQL modes (issue 801).

2010-04-01: version 1.0.22

   * Added DSN OPTIONS section to POD (issue 55).

2010-01-06: version 1.0.21

   * The script crashed immediately on some OS or versions of Perl (issue 733).
   * Added --check-interval, --check-slave-lag and --max-lag (issue 758).

2009-10-30: version 1.0.20

   * Added --sleep-coef (issue 540).
   * --primary-key-only on table without a primary key caused error (issue 655).
   * --set-vars did not work (issue 597).
   * Command line options did not override config file options (issue 617).

2009-08-31: version 1.0.19

   * --dest did not inherit password from --source (issue 460).
   * Added standard connection options like --host, --port, etc.(issue 248).

2009-07-31: version 1.0.18

   * Added RISKS section to POD (issue 538).
   * --dry-run did not respect --no-delete (issue 524).
   * The script crashed immediately on Windows (issue 531).

2009-06-30: version 1.0.17

   * Removed the --test long option.  Use --dry-run instead.
   * Removed the --time long option.  Use --run-time instead.
   * Removed the --ascendfirst long option.  Use --ascend-first instead.
   * Removed the --askpass long option.  Use --ask-pass instead.
   * Removed the --bulkdel long option.  Use --bulk-delete instead.
   * Removed the --bulkins long option.  Use --bulk-insert instead.
   * Removed the --[no]chkcols long option.  Use --[no]check-columns instead.
   * Removed the --delayedins long option.  Use --delayed-insert instead.
   * Removed the --forupdate long option.  Use --for-update instead.
   * Removed the --hpselect long option.  Use --high-priority-select instead.
   * Removed the --lpdel long option.  Use --low-priority-delete instead.